--- a/dashboard/templates/baseManager.html
+++ b/dashboard/templates/baseManager.html
@@ -28,6 +28,8 @@
   <div class="container-fluid" style="padding:0; margin:0;">
 
   {% include 'sidebar.html' %}
+  {% include 'navbarM.html' %}
+
 
     {% block content %}
     {% endblock %}
