--- a/dashboard/templates/dashboard/category_add.html
+++ b/dashboard/templates/dashboard/category_add.html
@@ -8,22 +8,70 @@
 
 {% block content%}
 
-<div class="content">
 
-    
 
-    <div class=" text-justify  shadow p-3  mb-5  " style="background-color: white;">
-        <a class="btn btn-dark" href="{% url 'dashboard:posts' %}"> Manage Post</a> 
-        <a class="btn btn-dark" href="{% url 'dashboard:addPost' %}"> Add Post</a> 
-        <h1 class="text-center">Add Category</h1>
 
-    <form action="" method="post" enctype="multipart/form-data">
+
+<link rel="stylesheet" href="{% static 'css/category.css' %}" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap" rel="stylesheet">
+   
+        
+  
+  <div class="content mobileContainer">
+
+    <!-- <a class="btn btn-dark" href="{% url 'dashboard:addPost' %}"> Add Post</a>  -->
+
+
+    <div style="width: 90%;" class="tableHeaderContainer">
+      <div class="postSection">
+        <h1 class="postSectionItem">Add Category</h1>
+        <!-- <a  href="{% url 'dashboard:addCategory' %}" class="postSectionItem btn btn-purple">Add Category</a> -->
+        <!-- <form class="postSectionItem unwanted-column">
+
+            <input class="postSectionSearch" placeholder="Searach Category.." type="search"><span></span>
+        </form> -->
+      </div>
+
+     
+
+    </div>
+<div style="border-radius: 10px;" class="tableConatiner shadow-lg">
+   
+    <form style="width: 100%;" action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
         {{ form | crispy }}
         <button class="btn btn-success" type="submit">Save</button>
     </form>
-    </div>
-    </div>
+    
+
+</div>
+
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"
+		integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=="
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.1/dist/chart.min.js"></script>
+
+
+
+
+
+
+    
     {% endblock content %}
     
