--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <link rel="stylesheet" href="{% static 'css/all.css' %}">
 
 <style>
@@ -91,14 +92,14 @@ margin-top: 4.7vh;
 
     .mediasFacebook{
 
-font-size: 22px; 
+font-size: 32px; 
 position: absolute !important;
  margin-left: 19.3vw;  
  margin-top: 4.7vh;
 }
 
 .mediasTwitter{
-font-size: 22px; 
+font-size: 32px; 
 position: absolute !important;
 margin-left: 21.1vw; 
 margin-top: 4.7vh;
@@ -111,14 +112,14 @@ margin-top: 4.7vh;
 
     .mediasFacebook{
 
-font-size: 22px; 
+font-size: 32px; 
 position: absolute !important;
  margin-left: 19.3vw;  
  margin-top: 4.7vh;
 }
 
 .mediasTwitter{
-font-size: 22px; 
+font-size: 32px; 
 position: absolute !important;
 margin-left: 21.0vw; 
 margin-top: 4.7vh;
@@ -129,14 +130,14 @@ margin-top: 4.7vh;
 
     .mediasFacebook{
 
-font-size: 22px; 
+font-size: 32px; 
 position: absolute !important;
  margin-left: 19.3vw;  
  margin-top: 4.7vh;
 }
 
 .mediasTwitter{
-font-size: 22px; 
+font-size: 32px; 
 position: absolute !important;
 margin-left: 20.7vw; 
 margin-top: 4.7vh;
@@ -178,8 +179,13 @@ margin-top: 4.7vh;
 
 <header style="display: block; position: relative;" class=" ">
 
-    <span><a  href="https://www.facebook.com/groups/deeperlifebiblechurchsingles"><i style="" class="mediasFacebook fab fa-facebook text-dark"></i></a>
-     <a href="https://twitter.com/dclmhq"> <i style="" class="mediasTwitter fab fa-twitter-square text-dark"></i></a></span> 
+    <button data-toggle="modal" data-target="#exampleModal" class="buttonHeader btn btn-warning rounded-0" style=" font-size: 10px; width: 100px; height: 25px; position: absolute;  margin-left: 19vw; margin-top: 4.9vh;">
+  
+        CONTACT
+    </button>
+
+    <!-- <span><a  href="https://www.facebook.com/groups/deeperlifebiblechurchsingles"><i style="" class="mediasFacebook fab fa-facebook text-dark"></i></a> -->
+     <!-- <a href="https://twitter.com/dclmhq"> <i style="" class="mediasTwitter fab fa-twitter-square text-dark"></i></a></span>  -->
      <button class="buttonHeader btn btn-dark rounded-0" style=" font-size: 10px; width: 100px; height: 25px; position: absolute;  margin-left: 74vw; margin-top: 4.9vh;">
   
          SUBSCRIBE
@@ -195,8 +201,38 @@ margin-top: 4.7vh;
   
          
   </header>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="{% url 'contact:submitted' %}" method="post" >
+            {% csrf_token %}
 
+            {{formMessage| crispy}}
 
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Send message</button>
+          
+        </div>
+        <div class="modal-footer">
+          
+        </div>
+</form>
+
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
