--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -69,17 +69,17 @@ opacity: 20%;
 
 </style>
 
-<nav   style="border-top: #eeeeee 1px solid;border-bottom: #eeeeee 1px solid; height: 50px; background-color: #c92020; background-color: #f4f5f5;"   id="navbarMain" class="sticky-top navbar navbar-expand-lg">
+<nav   style="border-top: #eeeeee 1px solid;border-bottom: #eeeeee 1px solid; background-color: #c92020; background-color: #f4f5f5;"   id="navbarMain" class="sticky-top navbar navbar-expand-lg">
   <!-- <nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom "> -->
     
       <button style=""  id="hamburger" onclick="searchRemover()" class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars text-dark"></i>
       </button>
   
-      <a id="logoNavbar" class="navbar-brand mx-auto mr-3" href="{% url 'website:home' %}"> <img class=" mx-auto" style="width: 170px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
+      <a id="logoNavbar" class="navbar-brand mx-auto ml-3" href="{% url 'website:home' %}"> <img class=" mx-auto" style="width: 170px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
       <a class="navbar-brand" href="#"><img src=""></a>
     
-      <i style="display: none; margin-right: 3vw;"  id="searchIconMobile" class="fas fa-search text-dark"></i>
+      <i style="display: none; margin-right: 2vw;"  id="searchIconMobile" class="fas fa-search text-dark"></i>
   
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul id="navbarContent" class="navbar-nav mx-auto ">
@@ -97,9 +97,10 @@ opacity: 20%;
           <li class="nav-item text-center text-bold navers">
             <a style="color: black;" href="{% url 'dashboard:main' %}"   class="text-white t " aria-current="page" >ADMIN PANEL</a> 
                  </li> 
-  
+                 	<!-- <a href="{% url 'signin' %}">Sign Up <i class="fas fa-user-plus"></i></a>
+   -->
       </div>
-      <i  style="margin-right: 3vw; "  id="searchIconMobile2" class="fas fa-search text-dark"></i>
+      <i  style="margin-right: 2vw; "  id="searchIconMobile2" class="fas fa-search text-dark"></i>
   
    
   </nav>
