--- a/website/templates/website/category.html
+++ b/website/templates/website/category.html
@@ -15,7 +15,7 @@
 	{% endif %}
 {% endblock %}
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/category.css' %}" />
+<link rel="stylesheet" href="{% static 'css/categories.css' %}" />
 
 <link rel="stylesheet" href="{% static 'css/all.css' %}" />
   <link rel="stylesheet" href="{% static 'css/home.css' %}" />
